<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cloud.xcan.angus</groupId>
  <artifactId>xcan-angusgm.extension</artifactId>
  <version>1.0.0</version>

  <name>AngusGM :: Extension</name>
  <packaging>pom</packaging>

  <modules>
    <module>api</module>
    <module>plugins</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <xcan-infra.bom.version>1.0.0</xcan-infra.bom.version>
    <xcan-plugin.bom.version>1.0.0</xcan-plugin.bom.version>
  </properties>

  <distributionManagement>
    <repository>
      <id>xcan-maven-release</id>
      <name>XCan Release</name>
      <url>https://nexus.xcan.cloud/repository/xcan-maven-release/</url>
    </repository>
    <snapshotRepository>
      <id>xcan-maven-snapshot</id>
      <name>XCan Snapshot</name>
      <url>https://nexus.xcan.cloud/repository/xcan-maven-snapshot/</url>
      <uniqueVersion>false</uniqueVersion>
    </snapshotRepository>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>cloud.xcan.angus</groupId>
      <artifactId>xcan-infra.spec</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <!-- !!! VERY IMPORTANT -->
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-infra.bom</artifactId>
        <version>${xcan-infra.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>cloud.xcan.angus</groupId>
        <artifactId>xcan-plugin.bom</artifactId>
        <version>${xcan-plugin.bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
